[package]
name = "dyna"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "0.7.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wirefilter-engine = { version = "0.6.1" }
