[package]
name = "dynafilter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dynafilter"
bench = false

[dependencies]
aho-corasick = "0.7.18"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
cidr = "0.1.0"
failure = "0.1.1"
fnv = "1.0.6"
indexmap = { version = "1.0.1", features = ["serde-1"] }
#regex = { version = "1.1.5", optional = true }
#fancy-regex = { version = "0.7.1", optional = true }
pcre2 = { version = "0.2.3", optional = true }
memmem = "0.1.1"
serde = { version = "1.0.78", features = ["derive"] }
serde_json = "1.0"
cfg-if = "0.1.6"
base64 = "0.13.0"


[dev-dependencies]
indoc = "0.3.0"
criterion = "0.2.11"
serde_json = "1.0.27"
lazy_static = "1.1.0"

[features]
default = ["pcre2"]